2005-09-22  Mark Grondona <mgrondona@llnl.gov>

	* doc/pdsh.1.in : Add note in LIMITATIONS about inability for
	  pdsh to guarantee remote commands are terminated after command
	  timeout.

2005-09-21  Mark Grondona <mgrondona@llnl.gov>

	* src/common/dsh.c (_rcp_response) : Print error string recvd from
	  remote RCP server. Remove confusing "Failed to initiate RCP protocol"
	  error message.

	* src/common/dsh.c (_rcp_response) : Remove legacy comments about
	  pcp response codes (we never send a response prefixed with 2) and
	  other small changes to rcp_response.

2005-09-14  Mark Grondona <mgrondona@llnl.gov>

	* src/common/hostlist.c : Update to latest hostlist code which
	  allows a suffix on hostlist expressions, e.g. foo[0-10]-bar.

2005-08-26  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/dshgroup.c (_read_groupfile) : module was testing 
	  for backupfile (/etc/dsh/group/%s), after access() call for 
	  default ($HOME/.dsh/group/%s) failed, but was still opening
	  default instead of backupfile. (Joe Ramey <ramey@it.com>)

2005-08-17  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/dsh.c (dsh) : Remove debug output when processing
	  remote return codes.

2005-08-15  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Allow PDSH_WITH_OPTIONS and PDSH_WITHOUT_OPTIONS
	  to be used to specify which conditional subpackages to build with
	  rpmbuild as well as existing --with and --without flags.

	* src/modules/genders.c : Tweak module help info for clarity.

	* : tag pdsh-2.7

2005-08-12  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/dshgroup.c : Add dshgroup module providing 
	  -g/-X groupname to read list of targets from groupname file in 
	  ~/.dsh/group/ or /etc/dsh/group/groupname.
	
	* configure.ac, pdsh.spec, config/ac_dshgroup.m4, 
	  src/modules/Makefile.am : 
	  Build, package, and document dshgroup module.

	* src/pdsh/dsh.c : Add alternate definition of PTHREAD_STACK_MIN in
	  case definition is missing from pthread.h.
